# prism

./: .gitignore  ARCHITECTURE.md  HANDOFF.md  MARKETS.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
data/universe/: sp500_coverage_2026-07-14.json  sp500_coverage_2026-07-17.json  sp500_membership_2026-07-14.parquet  sp500_membership_2026-07-17.parquet  sp500_pit_2026-07-14.txt  sp500_pit_2026-07-17.txt  sp500_pit_resolved_2026-07-14.txt  sp500_pit_resolved_2026-07-17.txt
docs/: account_size_floor.md  aim_portfolio_preregistration.md  amendments_2026-07.md  audit.md  b2_anti_netting_diagnostic.md  bar_vendor_divergence.md  beta_telemetry.md  carry_flatten_diagnostic.md  cost_frontier.md  covariance_cleaning_preregistration.md  data_integrity_diagnostic.md  data_purchase_evaluation.md  dead_ticker_price_design.md  demotion_design.md  edge_preregistration.md  factory_amendment.md  free_tier_profile.md  handoff.md  human_review_handbook.md  joint_crash_diagnostic.md  learned_xsection_design.md  momentum_design.md  operations.md  pinned_interpretations.md  program_review_2026-07.md  quickstart.md  r2_design.md  regime_step.md  replay_concordance_diagnostic.md  replication_preregistration.md  risk_profile_schema.md  security.md  sentiment_roadmap.md  sizing_preregistration.md  spin_adjustment_sweep.md  stat_arb.md  stat_arb_shrinkage_experiment.md  tax_wedge.md  tax_wedge_spec.md  trend_design.md  (+1 more)
docs/anchors/: ratify-a4-2026-07-19.txt  ratify-a4-2026-07-19.txt.ots  ratify-a4-2026-07-19.txt.ots.bak  ratify-amendments-2026-07.txt  ratify-amendments-2026-07.txt.ots  ratify-amendments-2026-07.txt.ots.bak  ratify-dead-ticker-2026-07-19.txt  ratify-dead-ticker-2026-07-19.txt.ots  ratify-dead-ticker-2026-07-19.txt.ots.bak  ratify-go-preconditions-2026-07-19.txt  ratify-go-preconditions-2026-07-19.txt.ots  ratify-go-preconditions-2026-07-19.txt.ots.bak  ratify-momentum-2026-07-06.txt  ratify-momentum-2026-07-06.txt.ots  ratify-momentum-2026-07-06.txt.ots.bak  ratify-pi1-2026-07-19.txt  ratify-pi1-2026-07-19.txt.ots  ratify-pi1-2026-07-19.txt.ots.bak  ratify-replication-2026-07-18.txt  ratify-replication-2026-07-18.txt.ots  ratify-replication-2026-07-18.txt.ots.bak  ratify-sizing-2026-07-20.txt  ratify-sizing-2026-07-20.txt.ots  ratify-tax-wedge-spec-2026-07-19.txt  ratify-tax-wedge-spec-2026-07-19.txt.ots  ratify-trend-2026-07-18.txt  ratify-trend-2026-07-18.txt.ots  ratify-trend-2026-07-18.txt.ots.bak  ratify-xsection-2026-07-19.txt  ratify-xsection-2026-07-19.txt.ots  ratify-xsection-2026-07-19.txt.ots.bak
docs/certifications/: 001-residual-reversion-daily-negative.md
formal/: PrismFormal.lean  README.md  lake-manifest.json  lakefile.toml
formal/PrismFormal/: Band.lean  Ledger.lean  Participation.lean  Purge.lean
research/: __init__.py  config.py  features.py  sentiment_analysis.py  trading.py
research/arbitrage/: __init__.py  pairs.py  residual_walk_forward.py  walk_forward.py
research/baselines/: __init__.py  buy_and_hold.py  ma_crossover.py  tsmom.py
research/models/: __init__.py  arima.py  base.py  ensemble.py  lstm_ppo.py  prophet.py  xgboost_model.py  xlstm_grpo.py  xlstm_ppo.py
research/scripts/: __init__.py  _cli_common.py  account_size_floor.py  backtest.py  bar_vendor_divergence.py  beta_telemetry.py  breadth_diagnostic.py  carry_flatten_diagnostic.py  cost_frontier.py  data_integrity_sweep.py  dividend_wedge.py  iex_eligibility_check.py  joint_crash_receipt.py  observatory_capture.py  rl_seed_eval.py  spin_adjustment_sweep.py  stat_arb_data.py  stat_arb_residual_wfo.py  stat_arb_wfo.py  sweep.py  tax_wedge.py  training.py
research/tracking/: __init__.py  mlflow_utils.py
results/: account_size_floor_2026-07-18.json  account_size_floor_day_2026-07-18.json  alpaca_corporate_actions_2020-01-02_2026-08-14.json  b1_remediation_repro_diff.json  bar_vendor_divergence_2026-07-19.json  beta_telemetry_2026-07-19.json  carry_flatten_diagnostic_2026-07-17.json  cost_frontier_2026-07-19.json  data_integrity_sweep_2026-07-13.json  data_integrity_sweep_2026-07-14.json  dividend_wedge_2026-07-13.json  iex_eligibility_2026-07-17.json  spin_adjustment_sweep_2026-07-19.json  stat_arb_residual_trials.jsonl  tax_wedge_2026-07-19.json
results/demotion_b1/: breadth_diagnostic.json  claim_packet.json  config.json  folds.json  summary.json
results/demotion_b2/: claim_packet.json  config.json  folds.json  summary.json
results/demotion_d1/: claim_packet.json  config.json  folds.json  summary.json
results/demotion_d2/: claim_packet.json  config.json  folds.json  summary.json
results/demotion_d3/: claim_packet.json  config.json  folds.json  summary.json
results/demotion_d4/: claim_packet.json  config.json  folds.json  summary.json
results/demotion_d5/: claim_packet.json  config.json  folds.json  summary.json
results/phaseA_rerun_band0.004/: claim_packet.json  config.json  folds.json  summary.json
results/phaseA_rerun_noband/: claim_packet.json  config.json  folds.json  summary.json
results/r2_t1_cfband_flat/: claim_packet.json  config.json  folds.json  summary.json
results/r2_t2_cfband_bucket/: claim_packet.json  config.json  folds.json  (+1 more)
tests/: test_account_size_floor.py  test_anytime.py  test_arbitrage.py  test_bar_vendor_divergence.py  test_baselines.py  test_beta_telemetry.py  test_breadth_diagnostic.py  test_broad_run_integration.py  test_capacity.py  test_carry_flatten_diagnostic.py  test_conformal.py  test_construct.py  test_cost_capacity.py  test_cost_frontier.py  test_data_integrity_sweep.py  test_data_loader.py  test_dividend_wedge.py  test_dividends.py  test_doctor.py  test_edge.py  test_equity_ledger.py  test_execution.py  test_factors.py  test_feature_engineer_leakage.py  test_fundamental_law.py  test_iex_eligibility_check.py  test_import_hygiene.py  test_incremental_store.py  test_joint_crash.py  test_ledger_conservation.py  test_live_alpaca.py  test_live_alpaca_data.py  test_live_daily.py  test_live_loop.py  test_live_replay.py  test_live_safety.py  test_logging.py  test_metrics.py  test_momentum_node.py  test_observatory.py  (+29 more)
(+103 files in other folders)
