[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism"
version = "0.3.0"
authors = [
    {name = "Brendon Reperttang", email = "boom90lb@mit.alum.edu"},
]
description = "Prism — a cross-sectional systematic trading engine (score → residualize → construct → execute), evaluated under a purged-WFO, cost-realistic, deflation-adjusted honesty harness"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "jax[cuda12]>=0.5.3",
    "flax>=0.10.5",
    "distrax>=0.1.5",
    "optax>=0.2.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.0",
    "xgboost>=1.7.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "gymnasium>=0.29.0",
    "mlflow>=3.0.0",
    "pyarrow>=10.0.0",
    "tqdm>=4.64.0",
    "python-dotenv>=1.0.0",
    "requests>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.10.0",
    "isort>=5.10.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.2.3.250308",
    "types-tqdm>=4.64.0.20250328",
    "types-requests>=2.32.0.20250328",
]

[project.urls]
"Homepage" = "https://github.com/boom90lb/prism"
"Bug Tracker" = "https://github.com/boom90lb/prism/issues"

# The batch WFO / sweep / stat-arb CLIs are quarantined under research/
# (SPEC §9), ship no entry points, and run as modules from the repo root
# (`python -m research.scripts.training`). Only the production-side periodic
# universe builder gets a console script.
[project.scripts]
prism-build-universe = "prism.scripts.build_sp500_universe:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.flake8]
max-line-length = 119

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = ["sklearn.*", "statsmodels.*", "prophet.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# src-layout: make `prism` importable from the source tree so tests do not
# depend on a (possibly stale) editable install. "." exposes the quarantined
# top-level `research` package (SPEC §9), which ships no wheel.
pythonpath = ["src", "."]
